Package: R.filesets
===================

Version: 1.7.2 [2012-12-03]
o CLEANUP: Now package only imports 'digest' and 'R.methodsS3'.


Version: 1.7.1 [2012-12-02]
o BUG FIX: getDefaultColumnNames() for TabularTextFile did not use
  'columnNames' if it was set when creating the TabularTextFile object.
o BUG FIX: Now getReadArguments() for TabularTextFile drops arguments
  that are NULL, because they could cause errors downstreams, e.g.
  readDataFrame() calling read.table(..., colClasses=NULL) =>
  rep_len(NULL, x) => "Error in rep_len(colClasses, cols) :
  cannot replicate NULL to a non-zero length".


Version: 1.7.0 [2012-11-30]
o Updated as.list() for GenericDataSet to return a *named* list of 
  GenericDataFile:s (previously it had no names).  The names are
  the (translated) full names of the GenericDataFile:s.
o CLEANUP: Removed lapply() and sapply() for GenericDataSet because
  the corresponding functions in the 'base' package utilizes 
  as.list().


Version: 1.6.1 [2012-11-28]
o Now GenericDataFile() retrieves the file time stamps such that
  hasBeenModified() returns a correct value also when first called,
  and not only TRUE just in case.  This has the effect that
  getChecksum() will detected cached results already at the
  second call as long as the file has to been modified.  Previously
  it took two calls to getChecksum() for it to be properly cached.
o Now declaring more internal and temporary Object fields as "cached",
  which means they will be cleared if clearCache() or gc() is called on
  the corresponding object.
o Added further verbose output to TabularTextFileSet.
o DOCUMENTATION: Minor corrections to help pages.


Version: 1.6.0 [2012-11-15]
o No updates. Bumped the version for CRAN release.


Version: 1.5.4 [2012-11-15]
o BACKWARD COMPATIBILITY: Made it possible for TabularTextFile to ignore
  header comment arguments when inferring column names and classes.  


Version: 1.5.3 [2012-11-13]