@@ -1,7 +1,7 @@
 Package: R.filesets
 Version: 1.7.2
 Depends: R (>= 2.6.0), R.oo (>= 1.10.1), R.utils (>= 1.18.0)
-Imports: R.methodsS3 (>= 1.4.2), R.oo (>= 1.10.1), R.utils (>= 1.18.0), digest (>= 0.6.0)
+Imports: stats, R.methodsS3 (>= 1.4.2), R.oo (>= 1.10.1), R.utils (>= 1.18.0), digest (>= 0.6.0)
 Suggests: gtools (>= 2.7.0)
 Date: 2012-12-03
 Title: Easy handling of and access to files organized in structured directories
