@@ -2,7 +2,11 @@ Package: R.filesets
 ===================
 
 Version: 1.7.2 [2012-12-03]
+o Generalized writeColumnsToFiles() to GenericTabularFile.  Used
+  to be available only for TabularTextFile.
 o CLEANUP: Now package only imports 'digest' and 'R.methodsS3'.
+  Added 'stats' to list of imported packages.
+o ROBUSTNESS: Now package declares S3 methods in the namespace.
 
 
 Version: 1.7.1 [2012-12-02]
